--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,18 @@ on:
     branches: [main]
     tags:
       - 'v*'  # Khi tạo tag, nó sẽ tự động phát hành
+  workflow_dispatch:  # Cho phép chạy thủ công
+    inputs:
+      os:
+        description: "Chọn hệ điều hành để build"
+        required: true
+        default: "all"
+        type: choice
+        options:
+          - all
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
 
 jobs:
   build:
@@ -12,7 +24,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: ${{ fromJson(inputs.os == 'all' && '["ubuntu-latest", "macos-latest", "windows-latest"]' || format('["{0}"]', inputs.os)) }}
 
     steps:
       - name: Checkout code
@@ -38,4 +50,37 @@ jobs:
           if [[ "$RUNNER_OS" == "Windows" ]]; then
             mv stockfish.exe stockfish-${{ runner.os }}.exe
           else
-            mv stockfish
+            mv stockfish stockfish-${{ runner.os }}
+          fi
+        shell: bash
+
+      - name: Archive binary
+        run: |
+          cd src
+          zip -r stockfish-${{ runner.os }}.zip stockfish*
+        shell: bash
+
+      - name: Upload binary artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: stockfish-${{ runner.os }}
+          path: src/stockfish-${{ runner.os }}.zip
+
+  release:
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: artifacts/*/*
+          body: "Stockfish 18 binaries for Windows, Linux, and macOS."
+          tag_name: ${{ github.ref_name }}
+          draft: false
+          prerelease: false
