--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,84 +3,79 @@ name: Build Stockfish 18
 on:
   push:
     branches: [main]
-    tags:
-      - 'v*'  # Khi tạo tag, nó sẽ tự động phát hành
-  workflow_dispatch:  # Cho phép chạy thủ công
-    inputs:
-      os:
-        description: "Chọn hệ điều hành để build"
-        required: true
-        default: "all"
-        type: choice
-        options:
-          - all
-          - ubuntu-latest
-          - macos-latest
-          - windows-latest
+  pull_request:
+    branches: [main]
 
 jobs:
-  build:
-    name: Build on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
+  build-windows:
+    runs-on: windows-2022
     strategy:
       matrix:
-        os: ${{ fromJson(inputs.os == 'all' && '["ubuntu-latest", "macos-latest", "windows-latest"]' || format('["{0}"]', inputs.os)) }}
-
+        arch: ["x86-64-bmi2", "x86-64-modern", "x86-64"]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install dependencies (Linux/macOS)
-        if: runner.os != 'Windows'
-        run: sudo apt update && sudo apt install -y make g++ || brew install make g++
-
-      - name: Install dependencies (Windows)
-        if: runner.os == 'Windows'
-        run: choco install mingw
-
+      - uses: actions/checkout@v4
+      
+      - name: Set up pagefile
+        uses: al-cheb/configure-pagefile-action@v1.4
+        with:
+          minimum-size: 16GB
+          maximum-size: 16GB
+          disk-root: "C:"
+      
       - name: Build Stockfish
         run: |
-          cd src
-          make -j$(nproc) build ARCH=x86-64-bmi2 || make -j$(nproc) build ARCH=x86-64-modern
-        shell: bash
-
-      - name: Rename binary
-        run: |
-          cd src
-          if [[ "$RUNNER_OS" == "Windows" ]]; then
-            mv stockfish.exe stockfish-${{ runner.os }}.exe
-          else
-            mv stockfish stockfish-${{ runner.os }}
-          fi
-        shell: bash
-
-      - name: Archive binary
-        run: |
-          cd src
-          zip -r stockfish-${{ runner.os }}.zip stockfish*
-        shell: bash
-
-      - name: Upload binary artifact
+          make clean
+          make -j build ARCH=${{ matrix.arch }}
+          strip stockfish.exe
+      
+      - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: stockfish-${{ runner.os }}
-          path: src/stockfish-${{ runner.os }}.zip
+          name: stockfish-windows-${{ matrix.arch }}
+          path: stockfish.exe
+          if-no-files-found: error
 
-  release:
-    needs: build
-    if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
+  build-linux:
+    runs-on: ubuntu-24.04
+    strategy:
+      matrix:
+        arch: ["x86-64-bmi2", "x86-64-modern", "x86-64"]
     steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
+      - uses: actions/checkout@v4
+      
+      - name: Install dependencies
+        run: sudo apt update && sudo apt install -y build-essential
+      
+      - name: Build Stockfish
+        run: |
+          make clean
+          make -j build ARCH=${{ matrix.arch }}
+          strip stockfish
+      
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
         with:
-          path: artifacts
+          name: stockfish-linux-${{ matrix.arch }}
+          path: stockfish
+          if-no-files-found: error
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
+  build-macos:
+    runs-on: macos-13
+    strategy:
+      matrix:
+        arch: ["x86-64"]
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Build Stockfish
+        run: |
+          make clean
+          make -j build ARCH=${{ matrix.arch }}
+          strip stockfish
+      
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
         with:
-          files: artifacts/*/*
-          body: "Stockfish 18 binaries for Windows, Linux, and macOS."
-          tag_name: ${{ github.ref_name }}
-          draft: false
-          prerelease: false
+          name: stockfish-macos-${{ matrix.arch }}
+          path: stockfish
+          if-no-files-found: error
