--- a/.github/workflows/buildKhanhFish.yml
+++ b/.github/workflows/buildKhanhFish.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [windows-latest]
 
     runs-on: ${{ matrix.os }}
 
@@ -21,20 +21,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install dependencies (Linux/macOS)
-        if: runner.os != 'Windows'
-        run: sudo apt-get update && sudo apt-get install -y make g++
-
       - name: Install dependencies (Windows)
         if: runner.os == 'Windows'
         run: |
           choco install make mingw
-
-      - name: Build KhanhFish (Linux/macOS)
-        if: runner.os != 'Windows'
-        run: |
-          cd src
-          make -j$(nproc) build ARCH=x86-64
 
       - name: Build KhanhFish (Windows)
         if: runner.os == 'Windows'
@@ -48,21 +38,4 @@ jobs:
           name: khanhfish-${{ runner.os }}
           path: src/khanhfish
 
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          files: artifacts/**
-          tag_name: latest
-          name: KhanhFish Latest Release
-          body: "Latest build of KhanhFish engine."
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
